--- a/pages/register/register.html
+++ b/pages/register/register.html
@@ -71,53 +71,52 @@
     ===================== MAIN =====================
     ============================================ -->
 
-    <main class="main-container">
-      <section class="section-padding mt-5">
-          <div class="container">
-              <div class="row g-0">
-                  <div class="col-lg-5 bg-warning">
-                      <h1 class="text-center font-weight-bold mt-2">Bienvenido</h1>
-                      <form id="register-form" class="row g-3 px-3 pb-3">
-                          <div class="col-12">
-                              <label for="name" class="form-label">Nombre y Apellido</label>
-                              <input type="text" name="name" class="form-control" id="name" placeholder="Leonel Messi"
-                                  required minlength="3" maxlength="70">
-                          </div>
-                          <div class="col-12">
-                              <label for="email" class="form-label">Email</label>
-                              <input type="email" class="form-control" id="email" aria-describedby="emailHelp"
-                                  placeholder="example@example.com" minlength="3" maxlength="70" required>
-                          </div>
-                          <div class="col-12">
-                              <label for="password" class="form-label">Contraseña</label>
-                              <input type="password" class="form-control" id="password" minlength="3" maxlength="70"
-                                  required>
-                          </div>
-                          <div class="col-12">
-                              <label for="passwordConfirmed" class="form-label">Repetir Contraseña</label>
-                              <input type="password" class="form-control" id="passwordConfirmed" minlength="3" maxlength="70"
-                                  required>
-                          </div>
-                          <div class="col-12">
-                              <div class="form-check">
-                                  <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-                                  <label class="form-check-label font-weight-bold" for="invalidCheck">
-                                      Aceptar condiciones
-                                  </label>
-                              </div>
-                          </div>
-                          <div class="col-12 text-center">
-                              <button class="btn btn-outline-light w-100 border-2" type="submit">Registrarse</button>
-                          </div>
-                      </form>
-                  </div>
-                  <div class="col-lg-7">
-                      <img src="/assets/images/register.jpg" class="img-fluid h-100" alt="">
-                  </div>
-              </div>
-          </div>
-      </section>
-  </main>
+        <main class="main-container">
+            <section class="section-padding mt-5">
+                <div class="container">
+                    <div class="row g-0 justify-content-center">
+                        <div class="col-lg-5 bg-primary" style="border-radius: 10px;">
+                            <h1 class="text-center font-weight-bold mt-2">Bienvenido</h1>
+                            <form id="register-form" class="row g-3 px-3 pb-3 mx-auto col-md-6">
+                                <div class="col-12">
+                                    <label for="name" class="form-label">Nombre y Apellido</label>
+                                    <input type="text" name="name" class="form-control" id="name" placeholder="Ingrese Nombre"
+                                        required minlength="3" maxlength="70">
+                                </div>
+                                <div class="col-12">
+                                    <label for="email" class="form-label">Email</label>
+                                    <input type="email" class="form-control" id="email" aria-describedby="emailHelp"
+                                        placeholder="example@example.com" minlength="3" maxlength="70" required>
+                                </div>
+                                <div class="col-12">
+                                    <label for="password" class="form-label">Contraseña</label>
+                                    <input type="password" class="form-control" id="password" minlength="3" maxlength="70"
+                                        required>
+                                </div>
+                                <div class="col-12">
+                                    <label for="passwordConfirmed" class="form-label">Repetir Contraseña</label>
+                                    <input type password" class="form-control" id="passwordConfirmed" minlength="3" maxlength="70"
+                                        required>
+                                </div>
+                                <div class="col-12">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+                                        <label class="form-check-label font-weight-bold" for="invalidCheck">
+                                            Aceptar condiciones
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-12 text-center">
+                                    <button class="btn btn-outline-light w-100 border-2" type="submit">Registrarse</button>
+                                </div>
+                            </form>
+                        </div>
+                        
+                    </div>
+                </div>
+            </section>
+        </main>
+    
 
     <!-- ===========================================
     ==================== FOOTER ====================
