--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <a class="nav-link" href="pages/about-us/about-us.html">Nosotros</a>
                         </li>
                     </ul>
-                    <div id="nav-icons" class="nav-icon d-flex justify-content-center">
+                    <div id="nav-icons" class="nav-icon d-flex justify-content-center nav-login">
                         <a href="pages/login/login.html" class="nav-link cart-icon mx-2 text-white">
                             <i class="fa-solid fa-user text-white"></i>
                         </a>
